--- a/12MegaBlog/src/App.css
+++ b/12MegaBlog/src/App.css
@@ -6,7 +6,7 @@
   justify-content: center;
   margin: 0;
 } */
-
+/* 
 .loader {
   width: 60px;
 }
@@ -53,7 +53,7 @@
   100% {
     content: 'Loading...';
   }
-}
+} */
 
 #root {
   max-width: 1280px;
